--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
+    "path": "^0.12.7",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
@@ -28,7 +29,7 @@
     "@playwright/test": "^1.51.1",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.15.24",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vitejs/plugin-vue-jsx": "^4.2.0",
     "@vitest/eslint-plugin": "^1.1.39",
@@ -46,6 +47,7 @@
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.6",
+    "vite-svg-loader": "^5.1.0",
     "vitest": "^3.1.1",
     "vue-tsc": "^2.2.8"
   }
